Possible NaNs with refractive BSDF #50700

Closed
opened 2017-02-16 13:02:41 +01:00 by Ivan Malek · 9 comments

System Information
i7 3930k
40GB RAM
Nvidia GeForce GTX660 (driver version 21.21.13.7653)
windows 10 pro, 64-bit

Blender Version
2.78a e8299c8

Short description of error
cycles renders artifacts, that look like NaN errors: see image 001_NaN.png

Exact steps for others to reproduce the error
open scene NaN_bug.blend, set viewport to "Rendered" or press f12 to render, while it's cooking, these white dots start to pop up

**System Information** i7 3930k 40GB RAM Nvidia GeForce GTX660 (driver version 21.21.13.7653) windows 10 pro, 64-bit **Blender Version** 2.78a e8299c8 **Short description of error** cycles renders artifacts, that look like NaN errors: see image ![001_NaN.png](https://archive.blender.org/developer/F486543/001_NaN.png) **Exact steps for others to reproduce the error** open scene [NaN_bug.blend](https://archive.blender.org/developer/F486545/NaN_bug.blend), set viewport to "Rendered" or press f12 to render, while it's cooking, these white dots start to pop up
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @IvanMalek

Added subscriber: @IvanMalek

Added subscribers: @Sergey, @ThomasDinges

Added subscribers: @Sergey, @ThomasDinges

Doesn't look like a bug, just reflections from the lamp. Disable MIS for the lamp and the birght spots go away.

@Sergey Can you confirm?

Doesn't look like a bug, just reflections from the lamp. Disable MIS for the lamp and the birght spots go away. @Sergey Can you confirm?
Sergey Sharybin self-assigned this 2017-02-23 11:42:20 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

The noise is coming from caustics i think. Usually using Filter Glossy will help, but it has no effect on Sharp distribution. Doing something like D2416 will help here.

At least that's what i see from quick investigation and might be wrong.

In any case, unsolvable noise is not a good thing anyway and disabling MIS is not really a solution in real production scenes.

Maybe @brecht can throw some ideas here as well :)

The noise is coming from caustics i think. Usually using Filter Glossy will help, but it has no effect on Sharp distribution. Doing something like [D2416](https://archive.blender.org/developer/D2416) will help here. At least that's what i see from quick investigation and might be wrong. In any case, unsolvable noise is not a good thing anyway and disabling MIS is not really a solution in real production scenes. Maybe @brecht can throw some ideas here as well :)

I think D2416 would be good for this case.

The other workaround is to use the transparent shadows trick, which might be good to add as a builtin feature of the glass BSDF node:
https://docs.blender.org/manual/en/dev/render/cycles/optimizations/reducing_noise.html#glass-and-transparent-shadows

I think [D2416](https://archive.blender.org/developer/D2416) would be good for this case. The other workaround is to use the transparent shadows trick, which might be good to add as a builtin feature of the glass BSDF node: https://docs.blender.org/manual/en/dev/render/cycles/optimizations/reducing_noise.html#glass-and-transparent-shadows

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

I've fixed some issues in D2416 and committed it now. So now there is a way to make his file to be less noisy.

Surely having some built-in feature for transparent shadow for BSDF will be interesting, but think that's out of the scope of this report.

I've fixed some issues in [D2416](https://archive.blender.org/developer/D2416) and committed it now. So now there is a way to make his file to be less noisy. Surely having some built-in feature for transparent shadow for BSDF will be interesting, but think that's out of the scope of this report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50700
No description provided.